--- a/ReactNativeWindows.dsc.yaml
+++ b/ReactNativeWindows.dsc.yaml
@@ -46,6 +46,7 @@ properties:
       settings:
         id: CoreyButler.NVMforWindows
         source: winget
+        version: "1.11.1" # We can remove this version pin once this issue is resolved: https://github.com/coreybutler/nvm-windows/issues/1068
     - resource: PSDscResources/Script
       id: NVMDefault
       dependsOn:
