--- a/ReactNativeWindows.dsc.yaml
+++ b/ReactNativeWindows.dsc.yaml
@@ -67,6 +67,30 @@ properties:
         TestScript: try { $yarnVersion = yarn -v; $true } catch { $false }
         SetScript: corepack enable
         GetScript: return @{ Result = yarn -v }
+    - resource: PSDscResources/Script
+      id: NpmConfigShell
+      dependsOn:
+        - Git
+        - NVM
+        - NVMDefault
+      directives:
+        description: npm config set shell "C:\\Program Files\\Git\\bin\\bash.exe"
+      settings:
+        TestScript: try { if ((npm config get shell) -eq 'C:\Program Files\Git\bin\bash.exe') { $true } else { $false } } catch { $false }
+        SetScript: npm config set shell "C:\\Program Files\\Git\\bin\\bash.exe"
+        GetScript: return @{ Result = npm config get shell }
+    - resource: PSDscResources/Script
+      id: NpmConfigScriptShell
+      dependsOn:
+        - Git
+        - NVM
+        - NVMDefault
+      directives:
+        description: npm config set script-shell "C:\\Program Files\\Git\\bin\\bash.exe"
+      settings:
+        TestScript: return ((npm config get script-shell) -eq 'C:\Program Files\Git\bin\bash.exe')
+        SetScript: npm config set script-shell "C:\\Program Files\\Git\\bin\\bash.exe"
+        GetScript: return @{ Result = npm config get script-shell }
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       id: vsPackage
       directives:
